fix for filters cover the “Ask Question” button on mobile

--- a/theme/default/less/responsive.less
+++ b/theme/default/less/responsive.less
@@ -10,9 +10,11 @@
 	  		.ap-search-form .ap-form-control{
 	  			width: 100%;
 	  		}
+	  		.ap-filter {
+	  			margin-bottom: 5px;
+	  		}
 	  		.ap-btn-ask {
 			    display: block;
-			    float: none;
 			    margin: 0;
 			    text-align: center;
 			}
